--- a/pom.xml
+++ b/pom.xml
@@ -76,11 +76,17 @@
 			<version>5.9</version>
 		</dependency>
 
-		<!-- Allure -->
+			<!-- Allure Reports -->
+		<dependency>
+			<groupId>io.qameta.allure</groupId>
+			<artifactId>allure-rest-assured</artifactId>
+			<version>2.29.0</version>
+		</dependency>
+
 		<dependency>
 			<groupId>io.qameta.allure</groupId>
 			<artifactId>allure-testng</artifactId>
-			<version>2.24.0</version>
+			<version>2.29.0</version>
 		</dependency>
 
 		<dependency>
