--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,11 @@
 			<version>4.21.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.testng</groupId>
+			<artifactId>testng</artifactId>
+			<version>7.9.0</version> 
+		</dependency>
 
 		<dependency>
 			<groupId>org.apache.poi</groupId>
