--- a/src/test/resources/config/qa.properties
+++ b/src/test/resources/config/qa.properties
@@ -10,5 +10,5 @@ headless = false
 incognito = false
 highlight = false
 
-remote = false
-huburl = http://13.201.89.36:4444/wd/hub
+remote = true
+huburl = http://3.109.32.130:4444/wd/hub
