changes in tear down method and added headless mode

--- a/src/test/resources/config/qa.properties
+++ b/src/test/resources/config/qa.properties
@@ -6,7 +6,7 @@ testname =
 username = feb2024@gmail.com
 password = Selenium@12345
 
-headless = false
+headless = true
 incognito = false
 highlight = false
 
